fix theme not showing

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,2 +1,3 @@
 $grey-color: #44475a;
 $grey-color-light: #8a8ea1;
+$grey-color-dark: #282a38;
